2001-10-31  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/empic.s: Undo damage inflicted on 2000-12-02.
	* gas/mips/empic.d: Likewise.
	* gas/mips/elempic.d: Likewise (it was copied into other files).
	* gas/mips/telempic.d: Likewise.
	* gas/mips/tempic.d: Likewise.

	* gas/mips/empic2.s: New test to check new 'la' and 'lw' (and
	related ops) syntax, test loads with large offsets.
	* gas/mips/emcic2.d: Likewise.
	* gas/mips/mips.exp: Run the new test on ELF platforms.

2001-10-31  Nick Clifton  <nickc@cambridge.redhat.com>

	* gas/mmix/pop-op.l: Update to match latest listing behaviour.
	* gas/mmix/reloc8.l: Update to match latest listing behaviour.
	* gas/mmix/resume-op.l: Update to match latest listing behaviour.
	* gas/mmix/save-op.l: Update to match latest listing behaviour.
	* gas/mmix/unsave-op.l: Update to match latest listing behaviour.

2001-10-31  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/tst.s: Delete unused file.
	* gas/mmix/unsave-op.s, gas/mmix/save-op.s, gas/mmix/resume-op.s,
	gas/mmix/reloc8.s, gas/mmix/prefix1.s, gas/mmix/pop-op.s,
	gas/mmix/greg8.s, gas/mmix/greg6.s, gas/mmix/expr-1.s,
	gas/mmix/greg1.s, gas/mmix/err-bspec-5.s, gas/mmix/op-0-1.s,
	gas/mmix/fb-2.s: Remove trailing empty lines.

2001-10-30  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix: New testsuite directory.

2001-10-24  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/ld-empic.d: Remove extra whitespace at beginning of
	file introduced in the change on 2001-05-15.

2001-10-24  Chris Demetriou  <cgd@broadcom.com>

	* gas/mips/mips-abi32-pic.s: Use ".word" rather than ".4byte".
	Delete use of ".size".
	* gas/mips/mips-abi32.s: Likewise.
	* gas/mips/mips-gp32-fp32-pic.s: Likewise.
	* gas/mips/mips-gp32-fp32.s: Likewise.
	* gas/mips/mips-gp32-fp64-pic.s: Likewise.
	* gas/mips/mips-gp32-fp64.s: Likewise.
	* gas/mips/mips-gp64-fp32-pic.s: Likewise.
	* gas/mips/mips-gp64-fp32.s: Likewise.
	* gas/mips/mips-gp64-fp64-pic.s: Likewise.